--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,47 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
+
+
+#grilla {
+    display: grid;
+    grid-template-areas:
+        "nav header header"
+        "nav productos publicidad"
+        "nav servicios publicidad"
+        "nav footer footer";
+    grid-template-rows: 100px 1fr 1fr 75px;
+    grid-template-columns: 20% auto 15%;
+    grid-column-gap: 10px;
+    grid-row-gap: 15px;
+    height: 100vh;
+}
+
+.border {
+    border: 1px solid black;
+    background-color: yellow;
+}
+
+header {
+    grid-area: header;
+}
+
+footer {
+    grid-area: footer;
+}
+
+section#productos {
+    grid-area: productos;
+}
+
+section#servicios {
+    grid-area: servicios;
+}
+
+nav{
+    grid-area: nav;
+}
+
+aside{
+    grid-area: publicidad;
+}
